--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,18 +7,35 @@
 }
 
 .section {
+    padding-top: 48px;
+    padding-bottom: 48px;
+
+    @media screen and (min-width: 768px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+    }
+
+    @media screen and (min-width: 1200px) {
     padding-top: 94px;
     padding-bottom: 94px;
+    }
 }
 
 .section__title {
+
     font-weight: 700;
+        font-size: 28px;
+        line-height: calc(33 / 28);
+        text-align: center;
+        letter-spacing: 0.03em;
+        color: var(--main-txt-cl);
+        margin-bottom: 30px;
+
+    @media screen and (min-width: 1200px) {
     font-size: 36px;
     line-height: calc(42 / 36);
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--main-txt-cl);
     margin-bottom: 50px;
+}
 }
 
 .subtitle {
@@ -28,6 +45,12 @@
     text-transform: uppercase;
     color: var(--main-txt-cl);
     margin-bottom: 10px;
+text-align: center;
+
+@media screen and (min-width: 768px) {
+  text-align: left;  
+}
+
 }
 
 img {
