--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,7 +1,18 @@
 .container {
-    width: 1200px;
+
+    // mobile styles 
+    max-width: 480px;
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+
+    // tablet styles
+    @media screen and (min-width: 768px) {
+    max-width: 768px;  
+    }
+    // desktop styles
+    @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+}
 }
