--- a/sass/layouts/_features.scss
+++ b/sass/layouts/_features.scss
@@ -1,10 +1,58 @@
 .features__list {
+
+    // mobile styles
+    display: block;
+
+    // tablet styles
+    @media screen and (min-width: 768px) {
     display: flex;
+    flex-wrap: wrap;
+    margin-left: calc(-1 * var(--indent));
+    margin-top: calc(-1 * var(--indent));
+    }
+
+    // desktop styles
+    @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: nowrap;
+    margin-left: 0;
+    margin-top: 0;
     gap: 30px;
+    }
 }
 
 .features__item {
+
+    // mobile styles
+    width: 100%;
+    
+    &:not(:last-child) {
+        margin-bottom: 30px;
+    }
+
+    // tablet styles
+    @media screen and (min-width: 768px) {
+    --items: 2;
+    flex-basis: calc(100% / var(--items) - var(--indent));
+    margin-left: var(--indent);
+    margin-top: var(--indent);
+
+    &:not(:last-child) {
+    margin-bottom: 0;
+    }
+    }
+
+    // desktop styles
+    @media screen and (min-width: 1200px) {
     width: 270px;
+    flex-basis: auto;
+    margin-left: 0;
+    margin-top: 0;
+
+    &:not(:last-child) {
+    margin-bottom: 0;
+    }
+}
 }
 
 .features__box {
