--- a/sass/layouts/_occupation.scss
+++ b/sass/layouts/_occupation.scss
@@ -1,7 +1,15 @@
+.occupation {
+    display: none;
+
+    @media screen and (min-width: 1200px) {
+    display: block;    
+    }
+}
+
 .occupation__list {
     display: flex;
     gap: 30px;
-}
+    }
 
 .occupation__item {
     position: relative;
