--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -3,22 +3,73 @@
 }
 
 .team-list {
+    // mobile styles
+        display: block;
+
+    // tablet styles
+    @media screen and (min-width: 768px) {
+     display: flex;
+    flex-wrap: wrap;
+    margin-left: calc(-1 * var(--indent));
+    margin-top: calc(-1 * var(--indent));
+    }
+
+    // desktop styles
+    @media screen and (min-width: 1200px) {
     display: flex;
+    flex-wrap: nowrap;
+    margin-left: 0;
+    margin-top: 0;
     gap: 30px;
+    }
 }
 
 .team-list-item {
+
+// mobile styles
+width: 100%;   
+border-radius: 0px 0px 4px 4px;
+box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+0px 2px 1px rgba(0, 0, 0, 0.2);
+
+&:not(:last-child) {
+margin-bottom: 30px;
+}
+
+// tablet styles
+@media screen and (min-width: 768px) {
+--items: 2;
+flex-basis: calc(100% / var(--items) - var(--indent));
+margin-left: var(--indent);
+margin-top: var(--indent);
+
+&:not(:last-child) {
+margin-bottom: 0;
+}
+}
+
+    // desktop styles
+    @media screen and (min-width: 1200px) {
     width: 270px;
-    border-radius: 0px 0px 4px 4px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
+    flex-basis: auto;
+    margin-left: 0;
+    margin-top: 0;
+
+    &:not(:last-child) {
+    margin-bottom: 0;
+    }
+}
 }
 
 .team-desc {
     padding-top: 30px;
-    padding-bottom: 30px;
+    padding-bottom: 24px;
     background-color: var(--main-bg-cl);
     border-radius: 0px 0px 4px 4px;
+
+    @media screen and (min-width: 1200px) {
+     padding-bottom: 30px;   
+    }
 }
 
 .team-name {
@@ -37,6 +88,6 @@
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--supporting-txt-cl);
-    margin-bottom: 30px;
+    margin-bottom: 16px;
 }
 
