--- a/sass/main.scss
+++ b/sass/main.scss
@@ -29,3 +29,4 @@
 @import './components/register-form';
 @import './components/socials-links';
 @import './components/subscription-form';
+@import './components/menu';
