--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -1,13 +1,61 @@
 .clients__list {
+    // mobile styles
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: calc(-1 * var(--indent));
+    margin-top: calc(-1 * var(--indent));
+
+    // tablet styles
+    @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: calc(-1 * var(--indent));
+    margin-top: calc(-1 * var(--indent));
+    }
+
+    // desktop styles
+    @media screen and (min-width: 1200px) {
     display: flex;
     justify-content: center;
+    flex-wrap: nowrap;
+    margin-left: 0;
+    margin-top: 0;
     gap: 30px;
+    }
 }
 
 .clients__item {
-    width: 170px;
+
+    // mobile styles
+    --items: 2;
+    flex-basis: calc(100% / var(--items) - var(--indent));
+    margin-left: var(--indent);
+    margin-top: var(--indent);
+
+    width: 210px;
     height: 92px;
+    
+
+    // tablet styles
+    @media screen and (min-width: 768px) {
+    --items: 3;
+    flex-basis: calc(100% / var(--items) - var(--indent));
+    margin-left: var(--indent);
+    margin-top: var(--indent);
+
+    width: 226px;
+    }
+
+    // desktop styles
+    @media screen and (min-width: 1200px) {
+    flex-basis: auto;
+    margin-left: 0;
+    margin-top: 0;
+
+    width: 170px;
 }
+}
+
 
 .clients__link {
     display: flex;
