--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,6 +1,7 @@
 .hero {
-    max-width: 1600px;
-    height: 600px;
+
+    max-width: 480px;
+    height: 400px;
     margin-left: auto;
     margin-right: auto;
     background-color: var(--supporting-bg-cl);
@@ -9,21 +10,42 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    padding-top: 118px;
+    padding-bottom: 118px;
+    text-align: center;
+
+@media screen and (min-width: 768px) {
+        max-width: 768px;
+    }
+
+@media screen and (min-width: 1200px){
+    max-width: 1600px;
+    height: 600px;
     padding-top: 200px;
     padding-bottom: 200px;
-    text-align: center;
+}
 }
 
 .hero-container {
+    width: 360px;
+
+@media screen and (min-width: 1200px) {
     width: 696px;
+}
 }
 
 .hero-title {
+
     font-weight: 900;
-    font-size: 44px;
-    line-height: calc(60 / 44);
+    font-size: 26px;
+    line-height: calc(42 / 26);
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--light-txt-cl);
     margin-bottom: 30px;
+
+    @media screen and (min-width: 1200px) {
+    font-size: 44px;
+    line-height: calc(60 / 44);
+}
 }
