--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,10 +1,16 @@
 .logo {
     font-family: var(--secondary-font);
     font-weight: 700;
-    font-size: 26px;
-    line-height: calc(31 / 26);
+    font-size: 24px;
+    line-height: calc(28 / 24);
     letter-spacing: 0.03em;
-    text-decoration: none;
+    text-decoration: none;    
+
+    @media screen and (min-width: 1200px) {
+    font-size: 26px;
+    line-height: calc(31 / 26);      
+    }
+
 }
 
 .logo span {
