--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -5,8 +5,13 @@
 }
 
 .footer-container {
+margin-left: auto;
+margin-right: auto;
+    @media screen and (min-width: 1200px) {
     display: flex;
     align-items: baseline;
+    }
+
 }
 
 .footer-logo {
@@ -16,7 +21,13 @@
 }
 
 .socials {
+    margin-bottom: 60px;
+
+    @media screen and (min-width: 1200px) {
     margin-right: 93px;
+    margin-bottom: 0;
+    }
+    
 }
 
 .socials-subtitle {
