--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@
   --accent-bg-cl: #2196F3;
   --grey-bg-cl: #F5F4FA;
   /* Others */
-  --items: 3;
+  --items: 2;
   --indent: 30px;
   --icon-cl: #AFB1B8;
   --anim-fast: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -43,14 +43,8 @@
 }
 
 .section {
-  padding-top: 48px;
-  padding-bottom: 48px;
-}
-@media screen and (min-width: 768px) {
-  .section {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 @media screen and (min-width: 1200px) {
   .section {
@@ -172,11 +166,16 @@ p {
 }
 
 .nav {
-  margin-right: 318px;
+  margin-right: 90px;
 }
 @media screen and (max-width: 767px) {
   .nav {
     display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .nav {
+    margin-right: 318px;
   }
 }
 
@@ -221,55 +220,77 @@ p {
 }
 
 .contacts__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 30px;
+  padding-top: 21px;
+  padding-bottom: 21px;
 }
 @media screen and (max-width: 767px) {
   .contacts__list {
     display: none;
   }
 }
+@media screen and (min-width: 1200px) {
+  .contacts__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 30px;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+}
 
-.contacts__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 161px;
-  height: 16px;
+.contacts__item:not(:last-child) {
+  margin-bottom: 10px;
 }
 @media screen and (max-width: 767px) {
   .contacts__item {
     display: none;
   }
 }
+@media screen and (min-width: 768px) {
+  .contacts__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts__item:not(:last-child) {
+    margin-bottom: 0;
+  }
+}
 
 .contacts__link {
   font-weight: 500;
-  line-height: 1.1428571429;
+  font-size: 12px;
+  line-height: 1.1666666667;
   letter-spacing: 0.02em;
   color: var(--supporting-txt-cl);
+  -webkit-transition: color var(--anim-fast);
+  transition: color var(--anim-fast);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 10px;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  -webkit-transition: color var(--anim-fast);
-  transition: color var(--anim-fast);
+  gap: 8px;
 }
 .contacts__link:hover {
   color: var(--accent-txt-cl);
 }
 .contacts__link:focus {
   color: var(--accent-txt-cl);
+}
+@media screen and (min-width: 1200px) {
+  .contacts__link {
+    font-size: 14px;
+    line-height: 1.1428571429;
+    gap: 10px;
+  }
 }
 
 .contacts__icon {
@@ -286,6 +307,20 @@ p {
 @media screen and (max-width: 767px) {
   .contacts__icon {
     display: none;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .mail-icon {
+    width: 14px;
+    height: 10px;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .tel-icon {
+    width: 10px;
+    height: 14px;
   }
 }
 
@@ -378,7 +413,6 @@ p {
 }
 @media screen and (min-width: 768px) {
   .features__item {
-    --items: 2;
     -ms-flex-preferred-size: calc(100% / var(--items) - var(--indent));
         flex-basis: calc(100% / var(--items) - var(--indent));
     margin-left: var(--indent);
@@ -510,7 +544,6 @@ p {
 }
 @media screen and (min-width: 768px) {
   .team-list-item {
-    --items: 2;
     -ms-flex-preferred-size: calc(100% / var(--items) - var(--indent));
         flex-basis: calc(100% / var(--items) - var(--indent));
     margin-left: var(--indent);
@@ -601,7 +634,6 @@ p {
 }
 
 .clients__item {
-  --items: 2;
   -ms-flex-preferred-size: calc(100% / var(--items) - var(--indent));
       flex-basis: calc(100% / var(--items) - var(--indent));
   margin-left: var(--indent);
@@ -688,6 +720,23 @@ p {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .footer-group {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    gap: 165px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-group {
+    gap: 70px;
+  }
+}
+
 .footer-logo {
   color: var(--light-txt-cl);
   display: block;
@@ -701,6 +750,7 @@ p {
   .socials {
     margin-right: 93px;
     margin-bottom: 0;
+    margin-top: 12px;
   }
 }
 
@@ -725,8 +775,6 @@ p {
 }
 @media screen and (min-width: 1200px) {
   .address-group {
-    width: 231px;
-    margin-right: 70px;
     text-align: left;
     margin-bottom: 0;
   }
@@ -754,11 +802,6 @@ p {
 }
 .address-contact-link:focus {
   color: var(--accent-txt-cl);
-}
-
-.portfolio {
-  padding-top: 94px;
-  padding-bottom: 94px;
 }
 
 /* Filters */
@@ -806,23 +849,42 @@ p {
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+@media screen and (max-width: 767px) {
+  .filters-list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+  }
+}
 
 /* Projects */
-.projects-list {
+@media screen and (min-width: 768px) {
+  .projects-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-left: calc(-1 * var(--indent));
+    margin-top: calc(-1 * var(--indent));
+  }
+}
+
+.projects-item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-left: calc(-1 * var(--indent));
-  margin-top: calc(-1 * var(--indent));
-}
-
-.projects-item {
-  -ms-flex-preferred-size: calc(100% / var(--items) - var(--indent));
-      flex-basis: calc(100% / var(--items) - var(--indent));
-  margin-left: var(--indent);
-  margin-top: var(--indent);
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
   -webkit-transition: -webkit-box-shadow var(--anim-fast);
   transition: -webkit-box-shadow var(--anim-fast);
   transition: box-shadow var(--anim-fast);
@@ -832,8 +894,26 @@ p {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+@media screen and (min-width: 768px) {
+  .projects-item {
+    -ms-flex-preferred-size: calc(100% / var(--items) - var(--indent));
+        flex-basis: calc(100% / var(--items) - var(--indent));
+    margin-left: var(--indent);
+    margin-top: var(--indent);
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .projects-item {
+    --items: 3
+    flex-basis: calc(100% / var(--items) - var(--indent));
+  }
+}
 
 .projects-desc {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   padding: 20px 24px;
   border-left: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
@@ -955,13 +1035,17 @@ p {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 528px;
-  height: 581px;
+  width: 450px;
   background-color: var(--main-bg-cl);
   padding: 40px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+  }
 }
 
 .modal-btn {
@@ -1000,9 +1084,14 @@ p {
   display: block;
   text-align: center;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   letter-spacing: 0.03em;
   margin-bottom: 12px;
+}
+@media screen and (min-width: 1200px) {
+  .register-form-title {
+    line-height: 1.15;
+  }
 }
 
 .register-form-group {
@@ -1152,6 +1241,9 @@ p {
 
 .register-form-btn {
   width: 200px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .socials-list {
@@ -1209,6 +1301,12 @@ p {
   color: var(--light-txt-cl);
   margin-bottom: 20px;
   font-size: 16px;
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .subscription-form-title {
+    text-align: left;
+  }
 }
 
 .subscription-form-group {
@@ -1232,12 +1330,13 @@ p {
 .subscription-form-label {
   margin-bottom: 20px;
   display: block;
-  width: 358px;
+  width: 450px;
   margin-left: auto;
   margin-right: auto;
 }
 @media screen and (min-width: 1200px) {
   .subscription-form-label {
+    width: 358px;
     margin-bottom: 0;
   }
 }
@@ -1348,6 +1447,7 @@ p {
 
 .menu-container {
   position: fixed;
+  z-index: 100;
   top: 0;
   left: 0;
   display: -webkit-box;
@@ -1407,13 +1507,59 @@ p {
 }
 
 .menu-toggle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0;
   position: absolute;
   top: 10px;
   right: 15px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.menu-toggle:hover .mobile-icon {
+  fill: var(--accent-bg-cl);
+}
+.menu-toggle:focus .mobile-icon {
+  fill: var(--accent-bg-cl);
 }
 
 .mobile-socials {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  gap: 10px;
+}
+
+.mobile-socials-item:not(:last-child) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+}
+.mobile-socials-item:not(:last-child)::after {
+  content: "";
+  display: block;
+  width: 1px;
+  background-color: rgba(33, 33, 33, 0.2);
+}
+
+.mobile-socials-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.2222222222;
+  letter-spacing: 0.02em;
+  color: var(--accent-txt-cl);
+}
+
+.current-link {
+  color: var(--accent-txt-cl);
 }/*# sourceMappingURL=main.css.map */
