--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -17,6 +17,7 @@ display: none;
 
 .menu-container {
   position: fixed;
+  z-index: 100;
   top: 0;
   left: 0;
 
@@ -70,11 +71,59 @@ color: var(--supporting-txt-cl);
 }
 
 .menu-toggle {
+display: flex;
+align-items: center;
+justify-content: center;
+
+padding: 0;
+
 position: absolute;
 top: 10px;
 right: 15px;
+
+background-color: transparent;
+border: none;
+
+cursor: pointer;
+}
+
+.mobile-icon {
+
+  .menu-toggle:hover & {
+    fill: var(--accent-bg-cl);
+  }
+
+  .menu-toggle:focus & {
+    fill: var(--accent-bg-cl);
+  }
 }
 
 .mobile-socials {
  display: flex; 
+ gap: 10px;
+}
+
+.mobile-socials-item:not(:last-child) {
+display: flex;
+gap: 10px;
+
+&::after {
+  content: '';
+  display: block;
+  width: 1px;
+  background-color: rgba(33, 33, 33, 0.2);
+  
+}
+} 
+
+.mobile-socials-link {
+font-weight: 500;
+font-size: 18px;
+line-height: calc(22/18);
+letter-spacing: 0.02em;
+color: var(--accent-txt-cl);
+}
+
+.current-link {
+  color: var(--accent-txt-cl);
 }
