--- a/sass/components/_register-form.scss
+++ b/sass/components/_register-form.scss
@@ -2,9 +2,13 @@
     display: block;
     text-align: center;
     font-size: 20px;
-    line-height: calc(23 / 20);
+    line-height: calc(30 / 20);
     letter-spacing: 0.03em;
     margin-bottom: 12px;
+
+    @media screen and (min-width: 1200px) {
+     line-height: calc(23 / 20);   
+    }
 }
 
 .register-form-group {
@@ -124,4 +128,7 @@ cursor: pointer;
 
 .register-form-btn {
     width: 200px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
