--- a/sass/components/_subscription-form.scss
+++ b/sass/components/_subscription-form.scss
@@ -1,8 +1,15 @@
+
+
 .subscription-form-title {
     display: block;
     color: var(--light-txt-cl);
     margin-bottom: 20px;
     font-size: 16px;
+    text-align: center;
+
+    @media screen and (min-width: 1200px) {
+     text-align: left;   
+    }
 }
 
 .subscription-form-group {
@@ -21,11 +28,12 @@
 .subscription-form-label {
     margin-bottom: 20px;
     display: block;
-    width: 358px;
+    width: 450px;
     margin-left: auto;
     margin-right: auto;
 
     @media screen and (min-width: 1200px) {
+    width: 358px;
     margin-bottom: 0;    
     }
 
@@ -52,6 +60,7 @@
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
 }
+
 }
 
 .subscription-btn {
