--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -14,6 +14,19 @@ margin-right: auto;
 
 }
 
+.footer-group {
+@media screen and (min-width: 768px) {
+display: flex;
+justify-content: center;
+gap: 165px;
+}
+
+@media screen and (min-width: 1200px) {
+gap: 70px;   
+}
+
+}
+
 .footer-logo {
     color: var(--light-txt-cl);
     display: block;
@@ -26,6 +39,7 @@ margin-right: auto;
     @media screen and (min-width: 1200px) {
     margin-right: 93px;
     margin-bottom: 0;
+margin-top: 12px;
     }
     
 }
