--- a/sass/layouts/_navigation.scss
+++ b/sass/layouts/_navigation.scss
@@ -1,8 +1,12 @@
 .nav {
-    margin-right: 318px;
-
+    margin-right: 90px;
+    
 @media screen and (max-width: 767px) {
 display: none;
+}
+
+@media screen and (min-width: 1200px) {
+margin-right: 318px;
 }
 }
 
