--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -1,7 +1,3 @@
-.portfolio {
-    padding-top: 94px;
-    padding-bottom: 94px;
-}
 
 /* Filters */
 
@@ -42,30 +38,55 @@
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
         0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+
+@media screen and (max-width: 767px) {
+  flex-wrap: wrap;
+  justify-content: left;  
+}
 }
 
 /* Projects */
 
 .projects-list {
+
+    @media screen and (min-width: 768px){
     display: flex;
     flex-wrap: wrap;
     margin-left: calc(-1 * var(--indent));
-    margin-top: calc(-1 * var(--indent));
+    margin-top: calc(-1 * var(--indent));       
+    }
+
 }
 
 .projects-item {
-    flex-basis: calc(100% / var(--items) - var(--indent));
-    margin-left: var(--indent);
-    margin-top: var(--indent);
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
     transition: box-shadow var(--anim-fast);
 
 &:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+
+@media screen and (min-width: 768px) {
+    flex-basis: calc(100% / var(--items) - var(--indent));
+    margin-left: var(--indent);
+    margin-top: var(--indent); 
+    margin-bottom: 0;   
+}
+
+@media screen and (min-width: 1200px) {
+    --items: 3
+    flex-basis: calc(100% / var(--items) - var(--indent));
+}
 }
 
 .projects-desc {
+    flex-grow: 1;
     padding: 20px 24px;
     border-left: 1px solid #eeeeee;
     border-bottom: 1px solid #eeeeee;
