--- a/sass/components/_register-form.scss
+++ b/sass/components/_register-form.scss
@@ -120,6 +120,11 @@ cursor: pointer;
     letter-spacing: 0.03em;
     color: var(--supporting-txt-cl);
     user-select: none;
+
+    @media screen and (max-width: 1199px) {
+    font-size: 12px;
+    line-height: calc(14 / 12);    
+    }
 }
 
 .register-form-link {
