--- a/css/main.css
+++ b/css/main.css
@@ -145,7 +145,6 @@ p {
 }
 
 .header__logo {
-  margin-right: 276px;
   padding-top: 16px;
   padding-bottom: 16px;
   color: var(--logo-txt-cl);
@@ -1442,6 +1441,7 @@ p {
   width: 40px;
   height: 40px;
   padding: 0;
+  margin-left: auto;
   background-color: transparent;
   border: none;
 }
