--- a/sass/components/_subscription-form.scss
+++ b/sass/components/_subscription-form.scss
@@ -28,9 +28,12 @@
 .subscription-form-label {
     margin-bottom: 20px;
     display: block;
-    width: 450px;
     margin-left: auto;
     margin-right: auto;
+
+    @media screen and (min-width: 768px) {
+     width: 450px;   
+    }
 
     @media screen and (min-width: 1200px) {
     width: 358px;
