--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -27,7 +27,10 @@
 }
 
 .hero-container {
-    width: 360px;
+    
+@media screen and (min-width: 768px) {
+    width: 360px;    
+}
 
 @media screen and (min-width: 1200px) {
     width: 696px;
