--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -14,4 +14,8 @@
     @media screen and (min-width: 1200px) {
     padding: 8px 30px;
     }
+
+    @media screen and (max-width: 439px) {
+    font-size: 14px;
+    }
 }
