--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -61,6 +61,10 @@ line-height: calc(40/34);
 letter-spacing: 0.02em;
 color: var(--accent-txt-cl);
 margin-bottom: 32px;
+
+@media screen and (max-width: 424px) {
+  font-size: 27px;
+}
 }
 
 .mobile-mail {
@@ -104,8 +108,10 @@ cursor: pointer;
  gap: 10px;
 }
 
+.mobile-socials-item {
+  display: flex;
+}
 .mobile-socials-item:not(:last-child) {
-display: flex;
 gap: 10px;
 
 &::after {
@@ -123,6 +129,10 @@ font-size: 18px;
 line-height: calc(22/18);
 letter-spacing: 0.02em;
 color: var(--accent-txt-cl);
+
+@media screen and (max-width: 424px) {
+ font-size: 12px; 
+}
 }
 
 .current-link {
