--- a/sass/components/_register-form.scss
+++ b/sass/components/_register-form.scss
@@ -9,6 +9,10 @@
     @media screen and (min-width: 1200px) {
      line-height: calc(23 / 20);   
     }
+
+    @media screen and (max-width: 439px) {
+    font-size: 15px;
+    }
 }
 
 .register-form-group {
@@ -31,6 +35,10 @@
     display: block;
     text-align: left;
     margin-bottom: 4px;
+
+    @media screen and (max-width: 439px) {
+    font-size: 10px;
+}
 }
 
 .register-form-input {
@@ -51,6 +59,7 @@
 &:hover {
 cursor: pointer;
 }
+
 }
 
 
@@ -67,8 +76,8 @@ cursor: pointer;
 
 .register-form-comment {
     display: block;
-    height: 138px;
     margin-bottom: 20px;
+
 }
 
 .register-form-message {
@@ -87,6 +96,15 @@ cursor: pointer;
     line-height: calc(14 / 12);
     letter-spacing: 0.01em;
     color: rgba(117, 117, 117, 0.5);
+}
+
+    @media screen and (max-width: 439px) {
+    height: 100px;
+    font-size: 10px;    
+
+    &::placeholder {
+        font-size: 10px;
+    }
 }
 }
 
@@ -124,6 +142,10 @@ cursor: pointer;
     @media screen and (max-width: 1199px) {
     font-size: 12px;
     line-height: calc(14 / 12);    
+    }
+
+    @media screen and (max-width: 439px) {
+    font-size: 10px;;
     }
 }
 
