--- a/sass/layouts/_address.scss
+++ b/sass/layouts/_address.scss
@@ -2,9 +2,11 @@
     text-align: center;
     margin-bottom: 60px;
 
+    @media screen and (min-width: 768px) {
+      margin-bottom: 0;  
+    }
     @media screen and (min-width: 1200px) {
         text-align: left;
-        margin-bottom: 0;
     }  
 }
 
