--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -15,6 +15,9 @@ margin-right: auto;
 }
 
 .footer-group {
+
+margin-bottom: 60px;
+
 @media screen and (min-width: 768px) {
 display: flex;
 justify-content: center;
@@ -22,7 +25,10 @@ gap: 165px;
 }
 
 @media screen and (min-width: 1200px) {
-gap: 70px;   
+gap: 70px;
+margin-right: 93px;
+align-items: baseline;
+margin-bottom: 0;
 }
 
 }
@@ -33,16 +39,6 @@ gap: 70px;
     margin-bottom: 20px;
 }
 
-.socials {
-    margin-bottom: 60px;
-
-    @media screen and (min-width: 1200px) {
-    margin-right: 93px;
-    margin-bottom: 0;
-margin-top: 12px;
-    }
-    
-}
 
 .socials-subtitle {
     color: var(--light-txt-cl);
