--- a/sass/layouts/_occupation.scss
+++ b/sass/layouts/_occupation.scss
@@ -2,7 +2,8 @@
     display: none;
 
     @media screen and (min-width: 1200px) {
-    display: block;    
+    display: block; 
+    padding-top: 0;   
     }
 }
 
