--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -65,12 +65,15 @@
     flex-direction: column;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 30px;
     transition: box-shadow var(--anim-fast);
 
 &:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+&:not(:last-child) {
+margin-bottom: 30px;
 }
 
 @media screen and (min-width: 768px) {
